Sketch Block: Remove 100% width from container to fix adaptability to align support (#310)

--- a/blocks/sketch/style.scss
+++ b/blocks/sketch/style.scss
@@ -1,5 +1,4 @@
 .wp-block-a8c-sketch {
-	width: 100%;
 	height: 100%;
 	position: relative;
 
@@ -12,4 +11,5 @@
 		touch-action: none;
 		overflow: hidden;
 	}
+
 }
